<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

        <data>
            <variable
                name="viewModel"
                type="com.example.myhome.presentation.features.appeal.add.add.BaseAppealAddViewModel" />
        </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apartment_selector"
            style="@style/Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Квартира">

            <AutoCompleteTextView
                android:id="@+id/apartment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_of_service_selector"
            style="@style/Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Тип услуги">

            <AutoCompleteTextView
                android:id="@+id/type_of_service_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/factory_number_input"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Заводской номер">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/factory_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.selectedFactoryNumber}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <include android:id="@+id/date_pickers_layout" layout="@layout/date_pickers_view"/>
    </LinearLayout>

</layout>