<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verified_at_date_picker"
            style="@style/Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Дата поверки"
            android:paddingHorizontal="0dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Text"
                android:id="@+id/verified_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/issued_at_date_picker"
            style="@style/Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:hint="Дата истечения"
            android:paddingHorizontal="0dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Text"
                android:id="@+id/issued_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</layout>